# asreview-insights

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  output-schema.json  pyproject.toml  setup.cfg  setup.py  stats_explainer.py
.github/workflows/: ci-workflow.yml  pythonpublish.yml
asreviewcontrib/insights/: __init__.py  _version.py  algorithms.py  entrypoint.py  erf.py  metrics.py  plot.py  recall.py  stats.py  utils.py  wss.py
asreviewcontrib/visualization/: __init__.py  _version.py  entrypoint.py  plot.py  plot_base.py  plot_discovery.py  plot_inclusions.py  plot_limit.py  plot_progression.py  quick.py
docs/: custom_title.py  example_absolute_axes.py  example_custom_title.py  example_multiple_lines.py  example_without_curves.py  stats_explainer.py
tests/: README.md  test_metrics.py  test_plot.py
tests/asreview_files/sim_ptsd_1.asreview/: project.json
tests/asreview_files/sim_ptsd_1.asreview/reviews/05406625aa954cb49308e2bc96637494/: results.sql  settings_metadata.json
tests/asreview_files/sim_ptsd_2.asreview/: project.json
tests/asreview_files/sim_ptsd_2.asreview/reviews/433c49377a81408baa0d3af3ade4fa5b/: results.sql
tests/data/: embase_labelled.csv
