[project]
name = "asreview-insights"
description = "Insights and plotting tool for the ASReview project"
authors = [
    { name = "ASReview LAB developers", email = "asreview@uu.nl" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = {text = "Apache-2.0"}
dependencies = ["numpy", "matplotlib", "asreview>=1,<2"]
dynamic = ["version"]
requires-python = ">=3.7"

[project.urls]
homepage = "https://asreview.ai"
repository = "https://github.com/asreview/asreview-insights"

[project.entry-points."asreview.entry_points"]
plot = "asreviewcontrib.insights.entrypoint:PlotEntryPoint"
metrics = "asreviewcontrib.insights.entrypoint:MetricsEntryPoint"

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["asreviewcontrib"]

[tool.setuptools_scm]
write_to = "asreviewcontrib/insights/_version.py"

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "B"]

[tool.ruff.lint.isort]
force-single-line = true
