[project]
name = "asreview-insights"
description = "Insights and plotting tool for the ASReview project"
authors = [
    { name = "ASReview LAB developers", email = "asreview@uu.nl" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {text = "Apache-2.0"}
dependencies = ["numpy", "matplotlib", "asreview>=2,<3"]
dynamic = ["version"]
requires-python = ">=3.10"

[project.urls]
homepage = "https://asreview.ai"
repository = "https://github.com/asreview/asreview-insights"

[project.entry-points."asreview.entry_points"]
plot = "asreviewcontrib.insights.entrypoint:PlotEntryPoint"
metrics = "asreviewcontrib.insights.entrypoint:MetricsEntryPoint"

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["asreviewcontrib"]

[tool.setuptools_scm]
write_to = "asreviewcontrib/insights/_version.py"

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "B"]

[tool.ruff.lint.isort]
force-single-line = true
